Align Fixed

--- a/css/main.css
+++ b/css/main.css
@@ -33,6 +33,7 @@ html, body {
 .desc-row {
     margin-top: 20px;
 }
+
 .text-style {
     font-family: 'EB Garamond',Georgia, serif;
      color: #74322c;
@@ -48,11 +49,13 @@ html, body {
 .footer {
     height: 200px;
     padding: 30px;
+    padding-bottom: 0;
 }
 .footer-container {
 
     background-color: #74322c;
-
+    box-shadow: inset 0 20px 50px -20px #42211d;
+    /*box-shadow: 10px 2px 30px 2px #42211d;*/
 }
 .element {
     display:inline;
@@ -61,11 +64,10 @@ html, body {
     letter-spacing: 0.0625em;
 
 }
-.info ul {
-    padding:0;
-    margin-left:-50px;
-}
 
+.top-margin {
+    margin-top: 30px;
+}
 .info li {
     color: #F5E9D3;
     font-size: 1.6em;
@@ -79,10 +81,14 @@ html, body {
         color: #F5E9D3;
 
 }
+
 .icons {
     fill: #F5E9D3;
-    margin-right:2px;
+    margin-right:5px;
 }
+
+.center-block {float: none !important}
+
 .typed-cursor{
     opacity: 1;
     font-size: 2.5em;
